# 3FS

./: MLWorkloadAnalyticsTest  Makefile.simple  README.md  build_gtest.sh  gtest_ml_workload_analytics  standalone_test  standalone_test.cc  test_ml_workload_analytics  test_ml_workload_analytics.cc
MLWorkloadAnalyticsTest.dSYM/Contents/: Info.plist
MLWorkloadAnalyticsTest.dSYM/Contents/Resources/DWARF/: MLWorkloadAnalyticsTest
MLWorkloadAnalyticsTest.dSYM/Contents/Resources/Relocations/aarch64/: MLWorkloadAnalyticsTest.yml
cmake/: CLangFormat.cmake
gtest_ml_workload_analytics.dSYM/Contents/: Info.plist
gtest_ml_workload_analytics.dSYM/Contents/Resources/DWARF/: gtest_ml_workload_analytics
gtest_ml_workload_analytics.dSYM/Contents/Resources/Relocations/aarch64/: gtest_ml_workload_analytics.yml
src/fbs/storage/: DataTiering.fbs
src/mgmtd/service/: StorageMgmt.cc  StorageMgmt.h
src/monitor_collector/service/: CMakeLists.txt  MLWorkloadAnalytics.cc  MLWorkloadAnalytics.h  README.md
src/storage/service/: DataTiering.cc  DataTiering.h  PrefetchManager.cc  PrefetchManager.h  StorageOperator.cc  StorageOperator.h
standalone_test.dSYM/Contents/: Info.plist
standalone_test.dSYM/Contents/Resources/DWARF/: standalone_test
test_ml_workload_analytics.dSYM/Contents/: Info.plist
test_ml_workload_analytics.dSYM/Contents/Resources/DWARF/: test_ml_workload_analytics
tests/: CMakeLists.txt
tests/monitor_collector/: CMakeLists.txt  MLWorkloadAnalyticsTest.cc
tests/monitor_collector/service/: CMakeLists.txt  MLWorkloadAnalyticsTest.cc
tests/storage/service/: DataTieringTest.cc  PrefetchManagerTest.cc
(+2 files in other folders)
